# cml

./: CMakeLists.txt  Makefile  main.c
include/: cml.h
samples/: gsl_matrix.c
src/: matrix.c  matrix.h
